--- a/src/index.css
+++ b/src/index.css
@@ -73,9 +73,7 @@ color: #f9f9f9;
 text-align: center;
 }
 
-.btn{
-  
-}
+
 
 .frm{
   display: flex;
@@ -83,6 +81,11 @@ text-align: center;
   gap: 5px;
   background-color: #f9f9f9;
   color: black;
+}
+
+#searchBar{
+  display: flexbox;
+  width: fit-content;
 }
 
 .input{
